Add more days