@@ -1,5 +1,10 @@
 //> using scala 3.5.2
 
+//> using option -Wunused:all
+
+// This is here to make VisualVM profiling happy
+//> using javaOpt -Xmx4g -Xverify:none
+
 //> using dep com.lihaoyi::os-lib::0.11.3
 
 //> using test.dep org.scalameta::munit:1.0.3
